Learned about tokens and JWT
